# home-automation

./: .gitignore  readme.md
camera/: pyproject.toml  upload-video-to-bucket.py
